# load_lpp

./: .gitignore  Cargo.toml  README.md  paper.md  rustfmt.toml
.github/workflows/: draft-pdf.yml
JOSS/: paper.bib  paper.md
src/: lib.rs  load_log_dad141.rs  load_plot.rs  load_process.rs  load_to_hourly.rs  utils.rs
test/: datetime.csv  datetime_easy.csv  datetime_for_parallel.csv  datetime_processed.csv  short_for_hourly.csv  test_all_steps_parallel.csv  timeload_anomalies.csv  timeload_processed.csv  timeload_raw.csv
