[package]
name = "load_lpp"
version = "11.0.3"
authors = ["Peruz <lucaperuzzo@outlook.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/Peruz/load_lpp"
description = "CLI apps for logging, processing, and plotting load time series"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.*"
clap = "4.0.*"
plotters = "0.3.4"
rayon = "1.*"
serde_json = "1.*"
serde = {version="1.*", features=['derive']}
